kubernetes/configs/minikube/ingress-resource-nginx-minikube.yaml
#
# Copyright 2018 Orkus, Inc
# All Rights Reserved.
#
# @author: Denys Nahurnyi.
# @email:  dnahurnyi@gmail.com
# ---------------------------------------------------------------------------

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress 
  annotations:
    #    nginx.org/grpc-services: "policyreader-service"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - orkus.dev.com 
    secretName: default-server-secret

  rules:
  - host: orkus.dev.com
    http:
      paths:
      - path: /v1/policy-reader/
        backend:
          serviceName: policyreader-service
          servicePort: 8081
      - path: /v1/graph-querymgr/
        backend:
          serviceName: graphquerymgr-service
          servicePort: 8089
      - path: /v1/intents/
        backend:
          serviceName: intentmgr-service
          servicePort: 8095
      - path: /v1/tenants
        backend:
          serviceName: tenantmgr-service
          servicePort: 8093
